--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
 				<% } %>
 
 				<!-- LOGIN FORM -->
-    			<form action="/login" method="post">
+    			<form action="/login" method="POST">
     			    <div class="form-group">
     			        <label>Email</label>
     			        <input type="text" class="form-control" name="email">
