local, twitter, google, FB auth up and running

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,15 @@
 				<a href="/signup" class="btn btn-default">
 					<span class="fa fa-user"> Local Signup</span>
 				</a>
+				<a href="/auth/facebook" class="btn btn-primary">
+					<span class="fa fa-facebook"> Facebook</span>
+				</a>
+				<a href="/auth/twitter" class="btn btn-info">
+					<span class="fa fa-twitter"> Twitter</span>
+				</a>
+				<a href="/auth/google" class="btn btn-danger">
+					<span class="fa fa-google-plus"> Google</span>
+				</a>
 			</div>
 		</div>
 	</body>
